--- a/charts/k8s-monitoring/charts/feature-auto-instrumentation/Makefile
+++ b/charts/k8s-monitoring/charts/feature-auto-instrumentation/Makefile
@@ -9,7 +9,7 @@ Chart.lock: Chart.yaml
 	@touch Chart.lock # Ensure the timestamp is updated
 
 values.schema.json: values.yaml $$(wildcard schema-mods/*)
-	../../../../scripts/schema-gen.sh .
+	docker run --rm --platform linux/amd64 --volume $(shell pwd):/chart ghcr.io/grafana/helm-chart-toolbox-schema-generator --chart /chart > $@
 
 .PHONY: clean
 clean:
