--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -43,7 +43,7 @@ jobs:
               exit 0
           fi
 
-          tests=$(find . -name values.yaml -exec dirname {} \;)
+          tests=$(find . -name test-plan.yaml -exec dirname {} \;)
           echo "Tests: ${tests}"
           echo "tests=$(echo "${tests}" | jq --raw-input --slurp --compact-output 'split("\n") | map(select(. != ""))')" >> "${GITHUB_OUTPUT}"
 
@@ -62,36 +62,57 @@ jobs:
         with:
           persist-credentials: 'false'
 
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+        with:
+          persist-credentials: 'false'
+          repository: grafana/helm-chart-toolbox
+          path: helm-chart-toolbox
+
       - name: Set up Helm
         uses: azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112  # v4.3.0
 
-      - name: Setup Kind CLI
+      - name: Install Flux CLI
+        uses: fluxcd/flux2/action@6bf37f6a560fd84982d67f853162e4b3c2235edb  # v2.6.4
+
+      - name: Install Kind CLI
         uses: helm/kind-action@a1b0e391336a6ee6713a0583f8c6240d70863de3  # v1.12.0
         with:
           install_only: true
 
+      - name: Install Minikube CLI
+        uses: medyagh/setup-minikube@e3c7f79eb1e997eabccc536a6cf318a2b0fe19d9  # v0.0.20
+        with:
+          start: false
+
       - name: Setup Flux CLI
         uses: fluxcd/flux2/action@6bf37f6a560fd84982d67f853162e4b3c2235edb  # v2.6.4
 
-      - name: Read special test dependencies
-        id: read_deps
-        env:
-          TEST: ${{ matrix.test }}
-        run: |
-          if [ -f "charts/k8s-monitoring/tests/integration/${TEST}/deps.json" ]; then
-            # e.g. ["terraform", "vendir"]
-            echo "deps=$(jq --compact-output '.' "charts/k8s-monitoring/tests/integration/${TEST}/deps.json")" >> "${GITHUB_ENV}"
-          else
-            echo "deps=[]" >> "${GITHUB_ENV}"
-          fi
-
-      - name: Install terraform
-        uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd  # v3.1.2
-        if: contains(env.deps, 'terraform')
-
       - name: Run test
-        run: ./scripts/run-cluster-test.sh "charts/k8s-monitoring/tests/integration/${TEST}"
+        run: helm-chart-toolbox/tools/helm-test/helm-test "${TEST_DIRECTORY}"
         env:
-          TEST: ${{ matrix.test }}
-          CREATE_CLUSTER: "true"
-          DELETE_CLUSTER: "true"
+          TEST_DIRECTORY: "source/tests/integration/${{ matrix.test }}"
+          DELETE_CLUSTER: true
+#
+#      - name: Read special test dependencies
+#        id: read_deps
+#        env:
+#          TEST: ${{ matrix.test }}
+#        run: |
+#          if [ -f "charts/k8s-monitoring/tests/integration/${TEST}/deps.json" ]; then
+#            # e.g. ["terraform", "vendir"]
+#            echo "deps=$(jq --compact-output '.' "charts/k8s-monitoring/tests/integration/${TEST}/deps.json")" >> "${GITHUB_ENV}"
+#          else
+#            echo "deps=[]" >> "${GITHUB_ENV}"
+#          fi
+#
+#      - name: Install terraform
+#        uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd  # v3.1.2
+#        if: contains(env.deps, 'terraform')
+
+#      - name: Run test
+#        run: ./scripts/run-cluster-test.sh "charts/k8s-monitoring/tests/integration/${TEST}"
+#        env:
+#          TEST: ${{ matrix.test }}
+#          CREATE_CLUSTER: "true"
+#          DELETE_CLUSTER: "true"
