WIP: Add default pod logs test
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -43,7 +43,7 @@ jobs:
               exit 0
           fi
 
-          tests=$(find . -name test-plan.yaml -exec dirname {} \;)
+          tests=$(find . -name test-plan.yaml -exec dirname {} \; | sed -e "s/^\.\///g")
           echo "Tests: ${tests}"
           echo "tests=$(echo "${tests}" | jq --raw-input --slurp --compact-output 'split("\n") | map(select(. != ""))')" >> "${GITHUB_OUTPUT}"
 
