Split the dependencies and fix the problem
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/charts/k8s-monitoring/tests/integration/pod-logs/default/test-plan.yaml
+++ b/charts/k8s-monitoring/tests/integration/pod-logs/default/test-plan.yaml
@@ -13,7 +13,8 @@ cluster:
   configFile: kind-cluster-config.yaml
 
 dependencies:
-  - file: dependencies/workloads.yaml
+  - file: dependencies/development-workload.yaml
+  - file: dependencies/production-workload.yaml
   - preset: prometheus
   - preset: loki
   - preset: grafana
