Add filelog test
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/charts/k8s-monitoring/tests/integration/application-observability/test-plan.yaml
+++ b/charts/k8s-monitoring/tests/integration/application-observability/test-plan.yaml
@@ -54,3 +54,7 @@ tests:
             # Host Info connector
             - query: traces_host_info{k8s_cluster_name="$CLUSTER", grafana_host_id="application-observability-test-cluster-control-plane"}
               type: promql
+
+            # Span Metrics connector
+            - query: traces_span_metrics_calls_total{cluster="$CLUSTER", span_name="/-/ready"}
+              type: promql
