--- a/charts/k8s-monitoring/tests/integration/application-observability/values.yaml
+++ b/charts/k8s-monitoring/tests/integration/application-observability/values.yaml
@@ -34,6 +34,8 @@ applicationObservability:
   connectors:
     grafanaCloudMetrics:
       enabled: true
+    spanMetrics:
+      enabled: true
   logs:
     enabled: false
 
