Convert the prom operator object test
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/charts/k8s-monitoring/tests/integration/prometheus-operator-objects/dependencies/cert-manager.yaml
+++ b/charts/k8s-monitoring/tests/integration/prometheus-operator-objects/dependencies/cert-manager.yaml
@@ -30,7 +30,7 @@ spec:
       interval: 1m
   dependsOn:
     - name: prometheus-operator-crds
-      namespace: prometheus
+      namespace: prometheus-operator-crds
   values:
     installCRDs: true
     prometheus:
