--- a/charts/k8s-monitoring/tests/integration/prometheus-operator-objects/values.yaml
+++ b/charts/k8s-monitoring/tests/integration/prometheus-operator-objects/values.yaml
@@ -17,6 +17,11 @@ prometheusOperatorObjects:
 
   podMonitors:
     enabled: true
+    extraDiscoveryRules: |
+      rule {
+        source_labels = ["__meta_kubernetes_pod_label_app_kubernetes_io_name"]
+        target_label = "service_name"
+      }
 
   # Will be deployed by the prometheus-operator-crds chart
   crds:
