Update generated files
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/charts/k8s-monitoring/docs/examples/resource-requests-and-limits/output.yaml
+++ b/charts/k8s-monitoring/docs/examples/resource-requests-and-limits/output.yaml
@@ -1762,6 +1762,9 @@ spec:
             limits:
               cpu: 200m
               memory: 50Mi
+            requests:
+              cpu: 100m
+              memory: 30Mi
       serviceAccountName: k8smon-windows-exporter
       containers:
         - name: windows-exporter
@@ -1802,6 +1805,9 @@ spec:
             limits:
               cpu: 200m
               memory: 50Mi
+            requests:
+              cpu: 100m
+              memory: 30Mi
           volumeMounts:
             - name: config
               mountPath: /config.yml
