--- a/charts/k8s-monitoring/tests/integration/application-observability/.rendered/output.yaml
+++ b/charts/k8s-monitoring/tests/integration/application-observability/.rendered/output.yaml
@@ -126,7 +126,25 @@ data:
     
         output {
           metrics = [otelcol.processor.batch.default.input]
-          traces = [otelcol.processor.batch.default.input]
+          traces = [otelcol.connector.spanmetrics.default.input, otelcol.processor.batch.default.input]
+        }
+      }
+    
+      // Span Metrics Connector
+      otelcol.connector.spanmetrics "default" {
+        dimensions_cache_size = 1000
+        namespace = "traces.span.metrics"
+    
+        histogram {
+          disable = false
+          unit = "ms"
+          explicit {
+            buckets = ["2ms","4ms","6ms","8ms","10ms","50ms","100ms","200ms","400ms","800ms","1s","1400ms","2s","5s","10s","15s"]
+          }
+        }
+    
+        output {
+          metrics = [otelcol.processor.batch.default.input]
         }
       }
     
