--- a/charts/k8s-monitoring/tests/integration/prometheus-operator-objects/.rendered/output.yaml
+++ b/charts/k8s-monitoring/tests/integration/prometheus-operator-objects/.rendered/output.yaml
@@ -35,6 +35,11 @@ data:
         scrape {
           default_scrape_interval = "60s"
         }
+        rule {
+          source_labels = ["__meta_kubernetes_pod_label_app_kubernetes_io_name"]
+          target_label = "service_name"
+        }
+    
         forward_to = argument.metrics_destinations.value
       }
     
