--- a/charts/k8s-monitoring/tests/integration/upgrade/patch/values.yaml
+++ b/charts/k8s-monitoring/tests/integration/upgrade/patch/values.yaml
@@ -49,7 +49,7 @@ alloy-metrics:
   extraConfig: |-
     remote.kubernetes.configmap "version" {
       name = "k8smon-version"
-      namespace = "default"
+      namespace = "toolbox"
     }
 
 alloy-singleton:
@@ -57,7 +57,7 @@ alloy-singleton:
   extraConfig: |-
     remote.kubernetes.configmap "version" {
       name = "k8smon-version"
-      namespace = "default"
+      namespace = "toolbox"
     }
 
 alloy-logs:
@@ -65,7 +65,7 @@ alloy-logs:
   extraConfig: |-
     remote.kubernetes.configmap "version" {
       name = "k8smon-version"
-      namespace = "default"
+      namespace = "toolbox"
     }
 
 extraObjects:
@@ -73,6 +73,6 @@ extraObjects:
     kind: ConfigMap
     metadata:
       name: k8smon-version
-      namespace: default
+      namespace: toolbox
     data:
       version: "{{ .Chart.Version }}"
