Pull collector overrides from the right source
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/charts/k8s-monitoring/templates/alloy-servicegraph.yaml
+++ b/charts/k8s-monitoring/templates/alloy-servicegraph.yaml
@@ -50,7 +50,7 @@
     {{- $collectorName := include "helper.k8s_name" (printf "%s-servicegraph" $destination.name) }}
     {{- $configMapContent := dict "create" true "content" $alloyConfig }}
     {{- $extraEnvContent := list (dict "name" "POD_NAME" "valueFrom" (dict "fieldRef" (dict "apiVersion" "v1" "fieldPath" "metadata.name"))) }}
-    {{- $collectorValues := merge (dict "nameOverride" $collectorName "alloy" (dict "configMap" $configMapContent "extraEnv" $extraEnvContent)) $destination.processors.tailSampling.collector }}
+    {{- $collectorValues := merge (dict "nameOverride" $collectorName "alloy" (dict "configMap" $configMapContent "extraEnv" $extraEnvContent)) $destination.processors.serviceGraphMetrics.collector }}
     {{- $values := (deepCopy $ | merge (dict "collectorName" $collectorName "collectorValues" $collectorValues)) }}
     {{- $alloyValues := include "collector.alloy.values" $values | fromYaml }}
     {{- $alloySpec := include "collector.alloy.valuesToSpec" $alloyValues }}
