Clean up doc sections
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/charts/k8s-monitoring/values.yaml
+++ b/charts/k8s-monitoring/values.yaml
@@ -345,9 +345,9 @@ alloy-profiles:
   # @section -- Collectors - Alloy Profiles
   enabled: false
 
-# Settings to apply to all Alloy instances created by this Helm chart. This includes Alloy instances created by
+# -- Settings to apply to all Alloy instances created by this Helm chart. This includes Alloy instances created by
 # enabling Tail Sampling or Service Graph Metrics.
-# @section -- Collectors - Alloy Common
+# @section -- Collectors - Alloy Template
 alloyTemplate: {}
 
 # The Alloy Operator is a Kubernetes Operator that manages Alloy instances and their lifecycle.
@@ -357,6 +357,7 @@ alloy-operator:
   deploy: true
 
 # -- Deploy additional manifest objects
+# @section -- Extra Objects
 extraObjects: []
 # - apiVersion: external-secrets.io/v1beta1
 #   kind: ExternalSecret
