Add DCGM Exporter integration
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/charts/k8s-monitoring/charts/feature-integrations/values.yaml
+++ b/charts/k8s-monitoring/charts/feature-integrations/values.yaml
@@ -52,6 +52,11 @@ alloy:
 cert-manager:
   instances: []
 
+# -- Scrape metrics/logs from DCGM Exporter
+# @section -- Integration: DCGM Exporter
+dcgm-exporter:
+  instances: []
+
 # -- Scrape metrics/logs from etcd
 # @section -- Integration: etcd
 etcd:
